--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.1.6",
+    "geist": "^1.3.1",
     "input-otp": "^1.2.4",
+    "jotai": "^2.9.0",
     "lucide-react": "^0.408.0",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
@@ -53,6 +55,7 @@
     "react-hook-form": "^7.52.1",
     "react-resizable-panels": "^2.0.20",
     "recharts": "^2.12.7",
+    "sans": "link:geist/font/sans",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
