--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "geist": "^1.3.1",
     "input-otp": "^1.2.4",
     "jotai": "^2.9.0",
+    "lodash.template": "^4.5.0",
     "lucide-react": "^0.408.0",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
@@ -63,6 +64,7 @@
     "vaul": "^0.9.1"
   },
   "devDependencies": {
+    "@types/lodash.template": "^4.5.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
